GNOME Bugzilla – Bug 784593
aggregator: Invalidate pad's tail position ...
Last modified: 2017-12-05 16:22:16 UTC
when dequeuing a segment event.
Created attachment 354988 [details] [review] aggregator: Invalidate pad's tail position ...
Review of attachment 354988 [details] [review]: Ooops, indeed. This should also probably be a candidate for backports to 1.12 and maybe even 1.10
Attachment 354988 [details] pushed as 3899b2f - aggregator: Invalidate pad's tail position ...
This was never backported.
commit 309330f8c0a28eeebd3fa809f82c20c25ca65de5 (HEAD -> 1.12) Author: Mathieu Duponchelle <mathieu.duponchelle@opencreed.com> Date: Thu Apr 13 22:11:55 2017 +0200 aggregator: Invalidate pad's tail position ... when dequeuing a segment event. https://bugzilla.gnome.org/show_bug.cgi?id=784593